# InvoicePulse

./: .env.example  .gitignore  README.md
backend/: __init__.py
backend/api/: README.md  __init__.py  drift_status.py  main.py  pyproject.toml  schemas.py
backend/python/drift_service/: README.md  pyproject.toml
backend/python/drift_service/src/drift_service/: __init__.py  config.py  drift_analysis.py  report_serializer.py  run_once.py  schema_mapper.py  supabase_client.py  supabase_uploader.py  test_dataset_loader.py  window_builder.py
backend/python/drift_service/tests/: inspect_evidently_report.py  test_drift_analysis.py  test_schema_mapper.py  test_window_builder.py
docs/: drift-dashboard-runbook.md  hf-dataset-ingestion.md  supabase-invoice-table
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/features/drift/: api.ts  hooks.ts  types.ts
frontend/src/features/drift/components/: DataWindowInfo.tsx  DriftFlagCard.test.tsx  DriftFlagCard.tsx  DriftMetricsPanel.tsx  HistoryTimeline.tsx  NotepadPanel.tsx
frontend/src/pages/dashboard/: DriftDashboardPage.tsx
supabase/migrations/: 0002_invoice_drift_reports.sql
