[project]
name = "invoicepulse-api"
version = "0.1.0"
description = "Backend API for InvoicePulse dashboard data."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "pydantic-settings",
  "supabase",
  "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
